Fixed login button being covered on main page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,7 +152,7 @@ a {
   align-items:center;
   flex-direction: column;
   position: relative;
-  margin: -150px 0;
+  /*margin: -150px 0;*/
 }
 
 input[type="text"] {
